[gd_scene load_steps=16 format=3 uid="uid://b7i4dbd5lrwgs"]

[ext_resource type="Script" path="res://controllers/player/scripts/fps_controller.gd" id="1_pgc1p"]
[ext_resource type="Material" uid="uid://b4gwd5h7ixvct" path="res://materials/player.tres" id="2_gldw4"]
[ext_resource type="Script" path="res://controllers/player/Health.gd" id="3_02p21"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ix834"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oc2v5"]
material = ExtResource("2_gldw4")

[sub_resource type="BoxMesh" id="BoxMesh_dgowj"]

[sub_resource type="Animation" id="Animation_rsaq4"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.453261, -0.423095, -0.426093), Vector3(0.453261, -0.456322, -0.426093)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(-0.151523, -0.00272925, 0.0180793), Vector3(-0.227392, 0.138184, 0.0182917)]
}

[sub_resource type="Animation" id="Animation_dpipc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/WeaponPivot:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.414419, -0.477498, -0.520283)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.466003, 0, 0)]
}

[sub_resource type="Animation" id="Animation_elu38"]
resource_name = "H_Attach"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.11409, -0.0161095, -0.511783)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraController/Camera3D/WeaponPivot/WeaponMesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.41383, -1.19914, -0.102655)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController/Camera3D/WeaponPivot:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 2.12771, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gutht"]
_data = {
"H_Attack": SubResource("Animation_elu38"),
"RESET": SubResource("Animation_dpipc"),
"idle": SubResource("Animation_rsaq4")
}

[sub_resource type="Animation" id="Animation_qgex6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D/PlaceholderMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.5, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2, 0)]
}

[sub_resource type="Animation" id="Animation_7fx0s"]
resource_name = "crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D/PlaceholderMesh:mesh:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CameraController:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShapeCast3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ltplr"]
resource_name = "sprint"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraController:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.35, 0), Vector3(0, 0.65, 0), Vector3(0, 0.35, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3jq4i"]
_data = {
"RESET": SubResource("Animation_qgex6"),
"crouch": SubResource("Animation_7fx0s"),
"sprint": SubResource("Animation_ltplr")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_5v2gh"]

[node name="FPSController" type="CharacterBody3D" node_paths=PackedStringArray("CAMERA_CONTROLLER", "ANIMATION_PLAYER", "WEP_ANIMATION")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_pgc1p")
CAMERA_CONTROLLER = NodePath("CameraController/Camera3D")
ANIMATION_PLAYER = NodePath("AnimationPlayer")
WEP_ANIMATION = NodePath("CameraController/Camera3D/WeaponPivot/WeaponAnimation")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ix834")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_oc2v5")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
fov = 90.0

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1

[node name="WeaponPivot" type="Node3D" parent="CameraController/Camera3D"]

[node name="WeaponMesh" type="MeshInstance3D" parent="CameraController/Camera3D/WeaponPivot"]
transform = Transform3D(0.1, 0, 0, 0, 0.893372, 0.0449319, 0, -0.449319, 0.0893372, 0.414419, -0.477498, -0.520283)
mesh = SubResource("BoxMesh_dgowj")

[node name="WeaponAnimation" type="AnimationPlayer" parent="CameraController/Camera3D/WeaponPivot"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_gutht")
}
autoplay = "idle"
playback_default_blend_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3jq4i")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("SphereShape3D_5v2gh")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Health" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 47.0
offset_bottom = 33.0
text = "HP: "
script = ExtResource("3_02p21")

[connection signal="animation_finished" from="CameraController/Camera3D/WeaponPivot/WeaponAnimation" to="." method="_on_weapon_animation_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
